[package]
name = "loady-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http"
path = "src/bin/http.rs"

[[bin]]
name = "dummy"
path = "src/bin/dummy.rs"

[dependencies]
tokio = { version = "1.32.0", features = [ "rt", "rt-multi-thread", "time", "macros", "sync" ]} 
reqwest = { version = "0.11.22" } 
rand = "0.8.5"
loady = { path = "../loady" }