[package]
name = "loady-sinks"
version = "1.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.32.0", features = [ "rt", "sync" ]} 
elasticsearch = "8.5.0-alpha.1"
serde = { version = "1.0.183" }
serde_json = "1.0.105"
chrono = "0.4.31"
loady = { path = "../loady" }